--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Notes</title>
-    <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
     <h1>Web Developer Bootcamp Notes</h1>
@@ -35,6 +35,15 @@
               </li>
               <li>
                 <a href="Htmls/FormExercise.html">Assignment 6- Form Exercise</a>
+              </li>
+              <li>
+                <a href="Htmls/AboutMe.html">Colors</a>
+              </li>
+              <li>
+                <a href="Htmls/DesignMaterials.html">Design Materials</a>
+              </li>
+              <li>
+                <a href="Htmls/SelectorsExercise.html">Selectors Exercise</a>
               </li>
             </ul>
 
