--- a/index.html
+++ b/index.html
@@ -1,57 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Notes</title>
 
-  </head>
-  <body>
-    <h1>Web Developer Bootcamp Notes</h1>
+</head>
+<body>
+<h1>Web Developer Bootcamp Notes</h1>
 
-      <ul>
-        <li>
-          <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML" target="_blank">MDN Web Docs</a>
-        </li>
-        <li>
-        <a href="https://drive.google.com/drive/folders/0B7qHXcyKO8LKWGdpcXQtM2liUjQ" target="_blank">Web Developer Bootcamp PDF</a>
-          <ul>
+<ul>
+    <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML" target="_blank">MDN Web
+            Docs</a>
+    </li>
+    <li>
+        <a href="https://drive.google.com/drive/folders/0B7qHXcyKO8LKWGdpcXQtM2liUjQ" target="_blank">Web Developer
+            Bootcamp PDF</a>
+        <ul>
             <li>Assignments</li>
-            <ul>         
-              <li>
-                <a href="Htmls/firstPAge.html">Assignment 1- Misc tags</a>
-              </li>
-              <li>
-                <a href="Htmls/Rusty.html">Assignment 2- Rusty the Dog</a>
-              </li>
-              <li>
-                <a href="Htmls/Rusty.html">Assignment 3- Pokemong</a>
-              </li>
-              <li>
-                <a href="Htmls/Form.html">Assignment 4- Form</a>
-              </li>
-              <li>
-                <a href="Htmls/MoreTags.html">Assignment 5- More Tags</a>
-              </li>
-              <li>
-                <a href="Htmls/FormExercise.html">Assignment 6- Form Exercise</a>
-              </li>
-              <li>
-                <a href="Htmls/AboutMe.html">Colors</a>
-              </li>
-              <li>
-                <a href="Htmls/DesignMaterials.html">Design Materials</a>
-              </li>
-              <li>
-                <a href="Htmls/SelectorsExercise.html">Selectors Exercise</a>
-              </li>
+            <ul>
+                
+                <li>
+                    <a href="http://www.csszengarden.com/">CSS ZenGarden</a>
+                </li>
+                <li>
+                    <a href="http://www.cssfontStack.com/">CSS Fonts</a>
+                </li>
+                <li>
+                    <a href="https://fonts.google.com/">Google Fonts</a>
+                </li>
+                <li>
+                    <a href="Htmls/AboutMe.html">Colors</a>
+                </li>
+                <li>
+                    <a href="Htmls/firstPAge.html">Assignment 1- Misc tags</a>
+                </li>
+                <li>
+                    <a href="Htmls/Rusty.html">Assignment 2- Rusty the Dog</a>
+                </li>
+                <li>
+                    <a href="Htmls/Rusty.html">Assignment 3- Pokemong</a>
+                </li>
+                <li>
+                    <a href="Htmls/Form.html">Assignment 4- Form</a>
+                </li>
+                <li>
+                    <a href="Htmls/MoreTags.html">Assignment 5- More Tags</a>
+                </li>
+                <li>
+                    <a href="Htmls/FormExercise.html">Assignment 6- Form Exercise</a>
+                </li>
+                <li>
+                    <a href="Htmls/SelectorsExercise.html">Selectors Exercise</a>
+                </li>
+                <li>
+                    <a href="Htmls/fontsDemo.html">Fonts Demo</a>
+                </li>
             </ul>
+        
+        </ul>
+    </li>
 
-          </ul>
-        </li>
-
-    </ul>
-    <p>
-    </p>
-  </body>
+</ul>
+<p>
+</p>
+</body>
 </html>
