--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
                     <a href="https://fonts.google.com/">Google Fonts</a>
                 </li>
                 <li>
+                    <a href="https://css-tricks.com/examples/hrs/">hr Styles</a>
+                </li>
+                <li>
+                    <a href="http://getbootstrap.com/">Bootstrap</a>
+                </li>
+                <li>
+                    <a href="http://www.getbootstrap.com/docs" class="btn-info btn-lg">BootStrap Docs</a>
+                </li>
+                <li>
                     <a href="Htmls/AboutMe.html">Colors</a>
                 </li>
                 <li>
