--- a/index.html
+++ b/index.html
@@ -42,38 +42,14 @@
                 <li>
                     <a href="https://getbootstrap.com/docs/4.0/layout/grid/" class="btn-info btn-lg">BootStrap Grid</a>
                 </li>
-    
                 <li>
-                    <a href="Htmls/AboutMe.html">Colors</a>
-                </li>
-                <li>
-                    <a href="Htmls/firstPAge.html">Assignment 1- Misc tags</a>
-                </li>
-                <li>
-                    <a href="Htmls/Rusty.html">Assignment 2- Rusty the Dog</a>
-                </li>
-                <li>
-                    <a href="Htmls/Rusty.html">Assignment 3- Pokemong</a>
-                </li>
-                <li>
-                    <a href="Htmls/Form.html">Assignment 4- Form</a>
-                </li>
-                <li>
-                    <a href="Htmls/MoreTags.html">Assignment 5- More Tags</a>
-                </li>
-                <li>
-                    <a href="Htmls/FormExercise.html">Assignment 6- Form Exercise</a>
-                </li>
-                <li>
-                    <a href="Htmls/SelectorsExercise.html">Selectors Exercise</a>
-                </li>
-                <li>
-                    <a href="Htmls/fontsDemo.html">Fonts Demo</a>
+                    <a href="https://unsplash.com" class="btn-info btn-lg">Unsplash images site </a>
                 </li>
             </ul>
-        
         </ul>
-    </li>
+
+</ul>
+</li>
 
 </ul>
 <p>
