--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
                 <li>
                     <a href="https://unsplash.com" class="btn-info btn-lg">Unsplash images site </a>
                 </li>
-            </ul>
+                <li>
+                    <a href="https://unsplash.com" class="btn-info btn-lg">Unsplash images site </a>
+                </li>
+                <li>
+                <a href="http://fontawesome.io/">Font Awesome</a>
+                    </li>
         </ul>
 
 </ul>
