--- a/Htmls/MoreTags.html
+++ b/Htmls/MoreTags.html
@@ -34,6 +34,6 @@
       <input type="submit" value="Submit">
       <br>
     </form>
-    <p><a href="../index.html">Back to Main</a></p>
+    <p><a href="notes.html">Back to Main</a></p>
   </body>
 </html>
