--- a/Htmls/Pokemon.html
+++ b/Htmls/Pokemon.html
@@ -38,5 +38,5 @@
 
     <p>Make something amazing with Brackets</p>
   </body>
-  <p><a href="../index.html">Back to Main</a></p>
+  <p><a href="notes.html">Back to Main</a></p>
 </html>
