--- a/Htmls/Rusty.html
+++ b/Htmls/Rusty.html
@@ -19,7 +19,7 @@
     </ul>
     
     Make sure to follow me on <a href="https://www.instagram.com/rustyisadog/" target="_parent">Instagram</a>
-    <p><a href="../index.html">Back to Main</a></p>
+    <p><a href="notes.html">Back to Main</a></p>
     
   </body>
 </html>
