--- a/Htmls/firstPAge.html
+++ b/Htmls/firstPAge.html
@@ -37,6 +37,6 @@
       </ul>
 
     </ul>
-    <p><a href="../index.html">Back to Main</a></p>
+    <p><a href="notes.html">Back to Main</a></p>
 
 </html>
