--- a/Htmls/notes.html
+++ b/Htmls/notes.html
@@ -20,6 +20,9 @@
         <ul>
             <li>Assignments</li>
             <ul>
+                <li>
+                    <a href="http://www.underscorejs.org/">JS UnderscoreJs library</a>
+                </li>
                 
                 <li>
                     <a href="http://www.csszengarden.com/">CSS ZenGarden</a>
