--- a/Htmls/notes.html
+++ b/Htmls/notes.html
@@ -21,35 +21,37 @@
             <li>Assignments</li>
             <ul>
                 <li>
-                    <a href="http://www.underscorejs.org/">JS UnderscoreJs library</a>
-                </li>
-                
-                <li>
-                    <a href="http://www.csszengarden.com/">CSS ZenGarden</a>
+                    <a href="http://www.underscorejs.org/" target="_blank">JS UnderscoreJs library</a>
                 </li>
                 <li>
-                    <a href="http://www.cssfontStack.com/">CSS Fonts</a>
+                    <a href="http://www.jquery.com/" target="_blank">JQuery library</a>
                 </li>
                 <li>
-                    <a href="https://fonts.google.com/">Google Fonts</a>
+                    <a href="http://www.csszengarden.com/" target="_blank">CSS ZenGarden</a>
                 </li>
                 <li>
-                    <a href="https://css-tricks.com/examples/hrs/">hr Styles</a>
+                    <a href="http://www.cssfontStack.com/" target="_blank">CSS Fonts</a>
                 </li>
                 <li>
-                    <a href="http://getbootstrap.com/">Bootstrap</a>
+                    <a href="https://fonts.google.com/" target="_blank">Google Fonts</a>
                 </li>
                 <li>
-                    <a href="http://www.getbootstrap.com/docs" class="btn-info btn-lg">BootStrap Docs</a>
+                    <a href="https://css-tricks.com/examples/hrs/" target="_blank">hr Styles</a>
                 </li>
                 <li>
-                    <a href="https://getbootstrap.com/docs/4.0/layout/grid/" class="btn-info btn-lg">BootStrap Grid</a>
+                    <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>
                 </li>
                 <li>
-                    <a href="https://unsplash.com" class="btn-info btn-lg">Unsplash images site </a>
+                    <a href="http://www.getbootstrap.com/docs" class="btn-info btn-lg" target="_blank">BootStrap Docs</a>
                 </li>
                 <li>
-                    <a href="http://fontawesome.io/">Font Awesome</a>
+                    <a href="https://getbootstrap.com/docs/4.0/layout/grid/" target="_blank" class="btn-info btn-lg">BootStrap Grid</a>
+                </li>
+                <li>
+                    <a href="https://unsplash.com" class="btn-info btn-lg" target="_blank">Unsplash images site </a>
+                </li>
+                <li>
+                    <a href="http://fontawesome.io/" target="_blank">Font Awesome</a>
                 </li>
             </ul>
         
