--- a/Htmls/notes.html
+++ b/Htmls/notes.html
@@ -53,6 +53,9 @@
                 <li>
                     <a href="http://fontawesome.io/" target="_blank">Font Awesome</a>
                 </li>
+                <li>
+                    <a href="https://imgur.com/" target="_blank">imagese</a>
+                </li>
             </ul>
         
         </ul>
