--- a/Htmls/notes.html
+++ b/Htmls/notes.html
@@ -56,6 +56,9 @@
                 <li>
                     <a href="https://imgur.com/" target="_blank">imagese</a>
                 </li>
+                <li>
+                    <a href="https://uigradients.com" target="_blank">color gradient</a>
+                </li>
             </ul>
         
         </ul>
