--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
 <li>
     <a href="https://markmjm.github.io/html-purrfectMatch/" target="_blank">PurrfectMatch</a>
 </li>
+<li>
+    <a href="https://markmjm.github.io/html-todo/" target="_blank">Todo Example</a>
+</li>
+
 </body>
 </html>
