--- a/Htmls/notes.html
+++ b/Htmls/notes.html
@@ -59,6 +59,9 @@
                 <li>
                     <a href="https://uigradients.com" target="_blank">color gradient</a>
                 </li>
+                <li>
+                    <a href="https://www.davidbaumgold.com/tutorials/command-line/" target="_blank">Getting to know the command line</a>
+                </li>
             </ul>
         
         </ul>
