--- a/Htmls/notes.html
+++ b/Htmls/notes.html
@@ -60,6 +60,9 @@
                     <a href="https://uigradients.com" target="_blank">color gradient</a>
                 </li>
                 <li>
+                    <a href="http://www.photosforclass.com" target="_blank">Photos For Class</a>
+                </li>
+                <li>
                     <a href="https://www.davidbaumgold.com/tutorials/command-line/" target="_blank">Getting to know the command line</a>
                 </li>
             </ul>
