--- a/Htmls/notes.html
+++ b/Htmls/notes.html
@@ -23,6 +23,9 @@
                 <li>
                     <a href="https://preview.c9users.io/learnwithcolt/webdevbootcamp/" target="_blank">Colt web dev bootcamp</a>
                 </li>
+                                <li>
+                    <a href="https://preview.c9users.io/learnwithcolt/webdevbootcamp/RESTful%20Routing/chart.html" target="_blank">Colt Restful Routes</a>
+                </li>
                 <li>
                     <a href="http://www.underscorejs.org/" target="_blank">JS UnderscoreJs library</a>
                 </li>
