--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <li>
-    <a href="https://markmjm.github.io/Bootstrap-loopLAB/src/" target="_blank">LoopLAB Bs4 Web Example</a>
+    <a href="https://markmjm.github.io/Bootstrap-loopLAB/src/" target="_blank">LoopLAB Bootstrap 4</a>
 </li>
 <li>
     <a href="https://markmjm.github.io/html-photoGallary/" target="_blank">BootStrap Gallary</a>
