--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <a href="https://markmjm.github.io/Bootstrap-loopLAB/src/" target="_blank">LoopLAB Bootstrap 4</a>
 </li>
 <li>
+    <a href="https://markmjm.github.io/Bootstrap-mizuxe/src/" target="_blank">Mizuxe Bootstrap 4</a>
+</li>
+    
+<li>
     <a href="https://markmjm.github.io/html-photoGallary/" target="_blank">BootStrap Gallary</a>
 </li>
 <li>
