--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
     <title>Html Pages</title>
 </head>
 <body>
-<li>
-    <a href="https://markmjm.github.io/Bootstrap-loopLAB/src/" target="_blank">LoopLAB Bootstrap 4</a>
-</li>
-<li>
-    <a href="https://markmjm.github.io/Bootstrap-mizuxe/src/" target="_blank">Mizuxe Bootstrap 4</a>
-</li>
-    <li>
-    <a href="https://markmjm.github.io/BootStrap-blogen/src/" target="_blank">Blogen Bootstrap 4</a>
-</li>
-<li>
-    <a href="https://www.bootstrapdash.com/bootstrap-4-tutorial/introduction/" target="_blank">bootstrap-4-tutorial</a>
-</li>    
-<li>
-    <a href="https://markmjm.github.io/html-photoGallary/" target="_blank">BootStrap Gallary</a>
-</li>
-<li>
-    <a href="./Htmls/notes.html" class="btn-info btn-lg" target="_blank">Web Developer Bootcamp Course Material</a>
-</li>
-<li>
-    <a href="https://markmjm.github.io/html-purrfectMatch/" target="_blank">PurrfectMatch</a>
-</li>
-<li>
-    <a href="https://markmjm.github.io/html-todo/" target="_blank">Todo Example</a>
-</li>
+    <b>Angular</b>
+    <ul>
+        <a href="https://markmjm.github.io/angular-faq/" target="_blank">FAQ app</a>
+    </ul>
+    <b>Misc</b>
+    <ul>
+        <li>
+            <a href="https://markmjm.github.io/Bootstrap-loopLAB/src/" target="_blank">LoopLAB Bootstrap 4</a>
+        </li>
+        <li>
+            <a href="https://markmjm.github.io/Bootstrap-mizuxe/src/" target="_blank">Mizuxe Bootstrap 4</a>
+        </li>
+            <li>
+            <a href="https://markmjm.github.io/BootStrap-blogen/src/" target="_blank">Blogen Bootstrap 4</a>
+        </li>
+        <li>
+            <a href="https://www.bootstrapdash.com/bootstrap-4-tutorial/introduction/" target="_blank">bootstrap-4-tutorial</a>
+        </li>    
+        <li>
+            <a href="https://markmjm.github.io/html-photoGallary/" target="_blank">BootStrap Gallary</a>
+        </li>
+        <li>
+            <a href="./Htmls/notes.html" class="btn-info btn-lg" target="_blank">Web Developer Bootcamp Course Material</a>
+        </li>
+        <li>
+            <a href="https://markmjm.github.io/html-purrfectMatch/" target="_blank">PurrfectMatch</a>
+        </li>
+        <li>
+            <a href="https://markmjm.github.io/html-todo/" target="_blank">Todo Example</a>
+        </li>
+    </ul>
 </body>
 </html>
